@@ -1,3 +1,8 @@
+2011-01-26  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/47476
+	* g++.dg/cpp0x/pr47476.C: New test.
+
 2011-01-26  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gcc.c-torture/compile/20110126-1.c: New test.
